# advent_of_code

./: .gitignore  Day3.ipynb  README.md  aoc2022.livemd  day10.py  day4.py  day6.py  day7.py  day8.py  day9.py  pyproject.toml
aoc/: day03.py  day05.py  day07.py  day11.py  day13.py  day14.py  day9.py
aoc2021/: pyproject.toml
aoc2021/aoc/: day06.py  day11.py  day14.py
aoc2021/src/: day1.rs  main.rs
aoc2021/src/day2/: p1.rs
aoc2022/: day5.txt
src/: main.rs
src/day2/: p2.rs
tests/: test_day11.py
