[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Andreas Kodewitz <andreas.kodewitz@gmail.com>"]
packages = [
    {include = "aoc"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
